# skills

./: .gitignore  README.md
.claude-plugin/: marketplace.json
skills/android-sdk-setup/: SKILL.md
skills/content-verify/: SKILL.md  pyproject.toml
skills/content-verify/scripts/: .env.example  logger.py  search.py  search_integration.py
skills/image-upscaler/: SKILL.md  pyproject.toml
skills/image-upscaler/scripts/: upscale.py
skills/memos/: SKILL.md  pyproject.toml
skills/memos/scripts/: .env.example  memos.py
skills/mijia-control/: SKILL.md
skills/pgsql-setup/: SKILL.md
skills/sftp-file-manager/: SKILL.md  pyproject.toml
skills/sftp-file-manager/scripts/: .env.example  sftp_files.py
skills/video-understand/: SKILL.md  pyproject.toml
skills/video-understand/scripts/: .env.example  understand.py
